--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
     <div class="row mx-auto justify-content-center">
-        <div class="col-3 text-center"><img src="/images/banner.png" class="img-fluid my-4 w-75" alt="banner"></div>
+        <div class="col-3 text-center"><img src="/images/banner1.png" class="img-fluid my-4 w-75" alt="banner"></div>
         <div class="col-6">
             <div class="row mt-5">
                 <div class="input-group border border-3 rounded search-input-group">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-    <div class="col-3 text-center"><img src="/images/banner.png" class="img-fluid my-4 w-75" alt="banner"></div>
+    <div class="col-3 text-center"><img src="/images/banner2.png" class="img-fluid my-4 w-75" alt="banner"></div>
 </div>
 
 </body>
