--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -6,6 +6,16 @@
 
 $all-colors: map-merge-multiple($colors, $blues, $indigos, $purples, $pinks, $reds, $oranges, $yellows, $greens, $teals, $cyans);
 
+$theme-colors: map-merge($theme-colors, $all-colors);
+
+@mixin setInputBoxShadow {
+  @each $c, $v in $theme-colors {
+   .box-shadow-#{$c}:focus {
+      box-shadow: 0 0 0 0.25rem rgb($v, 25%);
+    }
+  }
+}
+
 $utilities: map-merge(
   $utilities,
   (
@@ -13,10 +23,7 @@ $utilities: map-merge(
       map-get($utilities, "color"),
       (
         values: map-merge(
-          map-get(map-get($utilities, "color"), "values"),
-          (
-            $all-colors
-          ),
+          map-get(map-get($utilities, "color"), "values"), $all-colors
         ),
       ),
     ),
@@ -24,23 +31,19 @@ $utilities: map-merge(
       property: background-color,
       class: bg,
       values: map-merge(
-        $utilities-bg-colors,
-        (
-          $all-colors
-        )
+        $utilities-bg-colors, $all-colors
       )
     ),
     "border-color": (
       property: border-color,
       class: border,
       values: map-merge(
-        $utilities-bg-colors,
-        (
-          $all-colors
-        )
+        $utilities-bg-colors, $all-colors
       )
     ),
   )
 );
+
+@include setInputBoxShadow;
 
 @import "../../node_modules/bootstrap/scss/utilities/api";
