--- a/views/users/header.ejs
+++ b/views/users/header.ejs
@@ -13,10 +13,8 @@
 </head>
 <body>
     <div class="container-fluid px-0 py-3">
-        <div class="row align-items-center mx-auto">
-            <div class="col-2"><img src="/images/circleLogo.png" class="img-fluid w-75 px-3 mx-auto d-block" alt="Logo"></div>
-            <div class="col-8"><img src="/images/rectLogo.png" class="img-fluid w-75 px-3 mx-auto d-block" alt="Logo"></div>
-            <div class="col-2"></div>
+        <div class="row justify-content-center align-items-center mx-auto">
+            <div class="col-8"><img src="/images/mainLogo.png" class="img-fluid w-75 px-3 mx-auto d-block" alt="Logo"></div>
         </div>
     </div>
     <div class="container-fluid mx-0 bg-red px-0">
