--- a/public/views/users/categories.ejs
+++ b/public/views/users/categories.ejs
@@ -4,30 +4,42 @@
     <div class="grid grid-rows-2 gap-12 py-12 mx-96 text-center text-red-700 text-xl font-semibold">
         <div class="grid grid-cols-3 gap-12">
             <div>
-                <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
-                <p>DRINKS</p>
+                <a href="/products/drinks">
+                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <p>DRINKS</p>
+                </a>
             </div>
             <div>
-                <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
-                <p>SNACKS</p>
+                <a href="/products/snacks">
+                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <p>SNACKS</p>
+                </a>
             </div>
             <div>
-                <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
-                <p>FRUITS</p>
+                <a href="/products/fruits">
+                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <p>FRUITS</p>
+                </a>
             </div>
         </div>
         <div class="grid grid-cols-3 gap-12">
             <div>
-                <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
-                <p>LACES</p>
+                <a href="/products/laces">
+                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <p>LACES</p>
+                </a>
             </div>
             <div>
-                <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
-                <p>UNIFORM</p>
+                <a href="/products/uniform">
+                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <p>UNIFORM</p>
+                </a>
             </div>
             <div>
-                <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
-                <p>SUPPLIES</p>
+                <a href="/products/supplies">
+                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <p>SUPPLIES</p>
+                </a>
             </div>
         </div>
     </div>
