--- a/public/views/admins/add-product.ejs
+++ b/public/views/admins/add-product.ejs
@@ -23,10 +23,21 @@
                                 </div>
                                 <div class="mb-3 w-full">
                                     <label for="product-shop" class="form-label inline-block mb-2 text-black text-sm">Store</label>
-                                    <select class="form-select form-select-sm appearance-none block w-full px-2 py-1 text-sm font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-red-700 focus:outline-none" name="store">
+                                    <select class="form-select form-select-sm appearance-none block w-full px-2 py-1 text-sm font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-red-700 focus:outline-none focus:ring-0" name="store">
                                         <option value="1" selected>Cooperative</option>
                                         <option value="2">Display Center</option>
                                         <option value="3">Canteen</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3 w-full">
+                                    <label for="product-category" class="form-label inline-block mb-2 text-black text-sm">Category</label>
+                                    <select class="form-select form-select-sm appearance-none block w-full px-2 py-1 text-sm font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-red-700 focus:outline-none" name="category">
+                                        <option value="1" selected>Drinks</option>
+                                        <option value="2">Snacks</option>
+                                        <option value="3">Fruits</option>
+                                        <option value="4">Laces</option>
+                                        <option value="5">Uniform</option>
+                                        <option value="6">Supplies</option>
                                     </select>
                                 </div>
                                 <div class="mb-3 w-full">
