--- a/public/views/users/header.ejs
+++ b/public/views/users/header.ejs
@@ -21,7 +21,7 @@
                                 <a class="dropdown-item py-2 px-4 font-normal block w-full bg-transparent text-gray-700 hover:bg-gray-100" href="#">Profile</a>
                             </li>
                             <li>
-                                <a class="dropdown-item py-2 px-4 font-normal block w-full bg-transparent text-gray-700 hover:bg-gray-100" href="#">Logout</a>
+                                <a class="dropdown-item py-2 px-4 font-normal block w-full bg-transparent text-gray-700 hover:bg-gray-100" href="/logout">Logout</a>
                             </li>
                         </ul>
                     </div>
