--- a/public/views/users/index.ejs
+++ b/public/views/users/index.ejs
@@ -20,13 +20,13 @@
                 </div>
                 <div class="carousel-inner relative w-full overflow-hidden">
                     <div class="carousel-item active float-left w-full">
-                        <img src="/images/image1.png" class="block w-full" alt="Wild Landscape"/>
+                        <img src="/images/displaycenter.png" class="block w-full"/>
                     </div>
                     <div class="carousel-item float-left w-full">
-                        <img src="/images/image2.png" class="block w-full" alt="Camera"/>
+                        <img src="/images/cooperative.png" class="block w-full"/>
                     </div>
                     <div class="carousel-item float-left w-full">
-                        <img src="/images/image3.png" class="block w-full" alt="Exotic Fruits"/>
+                        <img src="/images/canteen.png" class="block w-full"/>
                     </div>
                 </div>
                 <button class="carousel-control-prev absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline left-0" type="button" data-bs-target="#carousel" data-bs-slide="prev" >
