--- a/public/views/users/item.ejs
+++ b/public/views/users/item.ejs
@@ -1,4 +1,8 @@
 <%- include('head-files.ejs') %>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
+<script src="/js/jquery.min.js"></script>
+<script src="/js/user-item.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
 </head>
 <%- include('header.ejs', {user: user, loggedIn: loggedIn, page: page}) %>
     <div class="pt-8 pl-8">
@@ -9,22 +13,23 @@
         <div class="col-span-3 col-start-2">
             <div class="flex flex-col">
                 <div class="flex gap-8">
-                    <img src="/images/item.png" alt="item" class="border-2 border-red-700 max-h-36">
+                    <img src="<%=product.image_url%>" alt="item" class="border-2 border-red-700 max-h-36">
                     <div class="font-semibold text-red-700 grow">
-                        <p class="text-xl uppercase">COCA-COLA ORIGINAL TASTE (180ml)</p>
-                        <p class="text-lg">&#8369;23</p>
-                        <p class="text-base font-normal text-black">Available: 30 items</p>
+                        <p class="text-xl uppercase"><%=product.name%></p>
+                        <p class="text-base font-normal"><%=product.description%></p>
+                        <p class="text-lg">&#8369;<span id="unitprice"><%=product.price%></span></p>
+                        <p class="text-base font-normal text-black">Available: <%=product.stock%> items</p>
                     </div>
                 </div>
                 <form method="post" class="mb-4">
                     <div class="flex gap-8 justify-center text-red-700 mb-4">
                         <div>
                             <span class="font-bold">QUANTITY:</span>
-                            <input type="number" name="quantity" id="quantity" class="border-2 border-red-700 text-red-700 focus:outline-none text-center rounded-md" min="1">
+                            <input type="number" name="quantity" id="quantity" class="focus:ring-0 p-0 border-2 border-red-700 text-red-700 focus:border-red-700 focus:outline-none text-center rounded-md w-40" min="1" max="<%=product.stock%>" value="1">
                         </div>
                         <div>
                             <span>TOTAL PRICE:</span>
-                            <span class="font-bold">&#8369;70</span>
+                            <span class="font-bold">&#8369;<span id="totalprice"><%=product.price%></span></span>
                         </div>
                     </div>
                     <div class="flex gap-8 justify-center">
@@ -34,7 +39,10 @@
                 </form>
                 <div class="flex flex-col text-red-700 text-xl mb-4">
                     <p class="font-bold">RATINGS</p>
-                    <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></span>
+                    <div class="flex">
+                        <div id="stars"></div>
+                        <p id="rating" class="self-center"><%=product.rating%></p> 
+                    </div>
                 </div>
                 <div class="flex flex-col">
                     <p class="font-bold text-xl text-red-700">REVIEWS</p>
