--- a/public/views/users/index.ejs
+++ b/public/views/users/index.ejs
@@ -4,14 +4,14 @@
     <div class="grid grid-cols-5 py-12">
         <div><img src="/images/banner1.png" class="px-8" alt="banner"></div>
         <div class="col-span-3 px-12">
-            <div class="flex mb-8">
+            <!-- <div class="flex mb-8">
                 <form action="" class="w-full" method="post">
                     <div class="flex relative items-center">
                         <input type="text" name="search" id="search" autocomplete="off" placeholder="Search" class="w-full pl-4 pr-12 py-2 border-2 rounded-md border-red-700 focus:outline-none">
                         <i class="fa fa-search absolute right-4 text-red-800 cursor-pointer" id="search-icon"></i>
                     </div>
                 </form>
-            </div>
+            </div> -->
             <div id="carousel" class="carousel slide relative mb-4" data-bs-ride="carousel">
                 <div class="carousel-indicators absolute right-0 bottom-0 left-0 flex justify-center p-0 mb-4">
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
