--- a/public/views/users/item.ejs
+++ b/public/views/users/item.ejs
@@ -33,8 +33,8 @@
                         </div>
                     </div>
                     <div class="flex gap-8 justify-center">
-                        <input type="button" value="ADD TO CART" class="border-2 border-red-700 text-red-700 px-4 rounded-md py-1 w-64 cursor-pointer active:bg-slate-50">
-                        <input type="button" value="BUY NOW" class="border-2 border-red-700 bg-red-700 text-white px-4 rounded-md py-1  w-64 cursor-pointer active:bg-red-800 active:border-red-800">
+                        <input type="button" value="ADD TO CART" class="border-2 border-red-700 text-red-700 px-4 rounded-md py-1 w-64 cursor-pointer active:bg-slate-50" data-id=<%=product.id%> data-user=<%=user.id%> id="addToCartBtn">
+                        <input type="button" value="BUY NOW" class="border-2 border-red-700 bg-red-700 text-white px-4 rounded-md py-1  w-64 cursor-pointer active:bg-red-800 active:border-red-800" data-id=<%=JSON.stringify(product)%> id="buyNowBtn">
                     </div>
                 </form>
                 <div class="flex flex-col text-red-700 text-xl mb-4">
