updated logo src

--- a/public/views/accounts/index.ejs
+++ b/public/views/accounts/index.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="grid grid-cols-7">
-        <img src="/images/mainLogo.png" alt="Logo" class="col-start-3 col-span-3">
+        <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1674522298/productImages/MainLogo_kwoajv.png" alt="Logo" class="col-start-3 col-span-3">
     </div>
     <div class="flex py-8 justify-center">
         <div class="py-4 px-12 border-4 border-red-700 w-1/3">
