--- a/public/views/admins/header.ejs
+++ b/public/views/admins/header.ejs
@@ -2,7 +2,7 @@
 <body>
     <div class="grid grid-cols-7">
         <div class="col-start-3 col-span-3">
-            <img src="/images/mainLogo.png" alt="Logo">
+            <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1674522298/productImages/MainLogo_kwoajv.png" alt="Logo">
         </div>
     </div>
     <div class="bg-red-800 h-16 grid grid-cols-5 items-center w-full">
