add to cart functionality

--- a/public/views/users/cart.ejs
+++ b/public/views/users/cart.ejs
@@ -1,4 +1,6 @@
 <%- include('head-files.ejs') %>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/user-cart.js"></script>
 </head>
 <%- include('header.ejs', {user: user, loggedIn: loggedIn, page: page}) %>
     <div class="pt-8 pl-8">
@@ -8,35 +10,21 @@
     <div class="grid grid-cols-5 pb-12">
         <div class="col-span-4 col-start-2 pr-24">
             <div class="grid grid-flow-row auto-rows-max gap-4">
-                <div class="flex gap-8">
-                    <img src="/images/item.png" alt="item" class="border-2 border-red-700 max-h-36">
-                    <div class="font-semibold text-red-700 grow">
-                        <p class="text-xl">Product Name</p>
-                        <p class="text-lg">Price</p>
-                        <p class="text-base">Quantity: 2</p>
+                <%cart.forEach(item => { %>
+                    <div class="flex gap-8">
+                        <img src="<%=item.image_url%>" alt="item" class="border-2 border-red-700 max-h-36">
+                        <div class="font-semibold text-red-700 grow">
+                            <p class="text-xl"><%=item.name%></p>
+                            <p class="text-lg item-prices"><%=item.price%></p>
+                            <p class="text-base">Quantity: <span class="item-quantities"><%=item.quantity%></span></p>
+                        </div>
                     </div>
-                </div>
-                <div class="flex gap-8">
-                    <img src="/images/item.png" alt="item" class="border-2 border-red-700 max-h-36">
-                    <div class="font-semibold text-red-700 grow">
-                        <p class="text-xl">Product Name</p>
-                        <p class="text-lg">Price</p>
-                        <p class="text-base">Quantity: 2</p>
-                    </div>
-                </div>
-                <div class="flex gap-8">
-                    <img src="/images/item.png" alt="item" class="border-2 border-red-700 max-h-36">
-                    <div class="font-semibold text-red-700 grow">
-                        <p class="text-xl">Product Name</p>
-                        <p class="text-lg">Price</p>
-                        <p class="text-base">Quantity: 2</p>
-                    </div>
-                </div>
+                <%});%>
             </div>
             <div class="border-2 border-red-700 my-4"></div>
             <div class="flex py-2">
                 <p class="text-red-700 font-semibold w-40">Customer Name:</p>
-                <p class="col-span-3">&langle; Customer Name &rangle;</p>
+                <p class="col-span-3"> <%=user.fn%> <%=user.ln%>
             </div>
             <div class="flex py-2">
                 <p class="text-red-700 font-semibold w-40">Phone Number:</p>
@@ -49,19 +37,19 @@
             <div class="flex py-2">
                 <p class="text-red-700 font-semibold w-40">Room:</p>
                 <select class="w-60 px-2 border-2 rounded-md border-red-700 active:outline-none focus:outline-none">
-                    <option value="R1" selected>Room 1</option>
-                    <option value="R2">Room 2</option>
-                    <option value="R3">Room 3</option>
-                    <option value="R4">Room 4</option>
+                    <%locations.forEach(location => { %>
+                        <option value="<%=location.id%>"><%=location.location%></option>
+                    <% }); %>
                 </select>
             </div>
             <div class="flex flex-row-reverse py-2 gap-8 items-center">
                 <div>
-                    <input type="submit" value="PLACE ORDER" class="px-4 py-2 bg-red-700 text-white hover:bg-red-800 active:bg-red-800 rounded-xl cursor-pointer">
+                    <input type="button" value="PLACE ORDER" class="px-4 py-2 bg-red-700 text-white hover:bg-red-800 active:bg-red-800 rounded-xl cursor-pointer"
+                    data-cart="<%=JSON.stringify(cart)%>">
                 </div>
                 <div class="flex flex-col text-red-700">
-                    <p>Date Ordered: 06-07-22</p>
-                    <p class="text-lg font-semibold">Total Amount: &#8369;23</p>
+                    <p>Date: <%= new Date().toLocaleDateString()%></p>
+                    <p class="text-lg font-semibold">Total Amount: &#8369; <span id="totalAmount"></span></p>
                 </div>
             </div>
         </div>
