--- a/public/views/users/header.ejs
+++ b/public/views/users/header.ejs
@@ -1,4 +1,4 @@
-<% let navs = {Home: "/", Categories: "/categories", Orders: "/orders", Cart: "/cart"}; %>
+<% let navs = {Home: "/", Categories: "/categories", Cart: "/cart", Orders: "/orders"}; %>
 <body>
     <div class="grid grid-cols-7">
         <div class="col-start-3 col-span-3">
