--- a/public/views/users/product-list.ejs
+++ b/public/views/users/product-list.ejs
@@ -5,7 +5,7 @@
         <%products.forEach(product => { %>
         <div class="rounded shadow-md p-4">
             <a href="/products/<%=category%>/<%=product.id%>">
-            <img src="/images/coke.jpeg" alt="product">
+            <img src="<%=product.image_url%>" alt="product">
             <h4 class="text-red-700 font-bold"><%=product.name%></h4>
             <div class="flex justify-between">
                 <h5 class="text-red-700 inline-block">&#8369;<%=product.price%></h5>
