--- a/public/views/admins/orders.ejs
+++ b/public/views/admins/orders.ejs
@@ -5,10 +5,10 @@
         <div class="flex flex-col gap-4">
             <a href="/products" class="text-xl font-bold text-red-700"><i class="fa-solid fa-arrow-left"></i> Back</a>
             <select name="order-status" id="order-status" class="px-4 py-1 border-red-700 border-2 text-red-700 rounded-md form-select focus:border-red-700 focus:ring-0">
-                <option value="A" selected>All</option>
-                <option value="P">In preparation</option>
-                <option value="D">Out for delivery</option>
-                <option value="C">Completed</option>
+                <option value="All" selected>All</option>
+                <option value="In Preparation">In preparation</option>
+                <option value="Out for delivery">Out for delivery</option>
+                <option value="Completed">Completed</option>
             </select>
         </div>
         <div class="col-span-4">
@@ -48,9 +48,9 @@
                             <td class="py-2">Room 1</td>
                             <td class="py-2">
                                 <select name="order-status-1" id="order-status-1" class="form-select px-4 py-1 w-full border-red-700 border-2 text-red-700 rounded-md focus:border-red-700 focus:ring-0">
-                                    <option value="P" selected>In preparation</option>
-                                    <option value="D">Out for delivery</option>
-                                    <option value="C">Completed</option>
+                                    <option value="In preparation" selected>In preparation</option>
+                                    <option value="Out for delivery">Out for delivery</option>
+                                    <option value="Completed">Completed</option>
                                 </select>
                             </td>
                         </tr>
