--- a/public/views/users/cart.ejs
+++ b/public/views/users/cart.ejs
@@ -36,7 +36,7 @@
             </div>
             <div class="flex py-2">
                 <p class="text-red-700 font-semibold w-40">Room:</p>
-                <select class="w-60 px-2 border-2 rounded-md border-red-700 active:outline-none focus:outline-none">
+                <select class="w-60 px-2 border-2 rounded-md border-red-700 active:outline-none focus:outline-none" id="location">
                     <%locations.forEach(location => { %>
                         <option value="<%=location.id%>"><%=location.location%></option>
                     <% }); %>
@@ -45,7 +45,7 @@
             <div class="flex flex-row-reverse py-2 gap-8 items-center">
                 <div>
                     <input type="button" value="PLACE ORDER" class="px-4 py-2 bg-red-700 text-white hover:bg-red-800 active:bg-red-800 rounded-xl cursor-pointer"
-                    data-cart="<%=JSON.stringify(cart)%>">
+                    data-cart="<%=JSON.stringify(cart)%>" data-user="<%=user.id%>" id="placeOrderBtn">
                 </div>
                 <div class="flex flex-col text-red-700">
                     <p>Date: <%= new Date().toLocaleDateString()%></p>
